--- a/iOS/iServerAdmin/Info.plist
+++ b/iOS/iServerAdmin/Info.plist
@@ -40,6 +40,23 @@
 			<false/>
 		</dict>
 	</dict>
+    <key>NSExceptionDomains</key>
+  	<dict>
+    	<key>wdgp.nl</key>
+    	<dict>
+      		<key>NSIncludesSubdomains</key>
+      		<true/>
+      		<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+      		<true/>
+      		<key>NSTemporaryExceptionMinimumTLSVersion</key>
+      		<string>TLSv1.1</string>
+    	</dict>
+  	</dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+    	<key>NSAllowsArbitraryLoads</key>
+    	<true/>
+	</dict>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
